Replaced bottom collection view with a popover table view

--- a/ShaderModifierLibrary/Storyboard/Base.lproj/Main.storyboard
+++ b/ShaderModifierLibrary/Storyboard/Base.lproj/Main.storyboard
@@ -21,90 +21,62 @@
                             <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1H6-Up-Faz">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </sceneKitView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NzZ-YF-piW" customClass="ShaderModifierCollectionView" customModule="ShaderModifierLibrary" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="LFG-av-U4X"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="U2t-tv-Tbg">
-                                    <size key="itemSize" width="76" height="96"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="shaderModifierCell" id="ZFA-R6-Rh6" customClass="ShaderModifierCollectionViewCell" customModule="ShaderModifierLibrary" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="2" width="76" height="96"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="76" height="96"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G6g-bl-Elg" userLabel="ContentView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="76" height="96"/>
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="60X-p2-u3e">
-                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="76" id="qnA-Uh-RUR"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJv-J8-7Jv">
-                                                            <rect key="frame" x="0.0" y="79" width="76" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                            <color key="shadowColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                            <size key="shadowOffset" width="1" height="1"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstItem="tJv-J8-7Jv" firstAttribute="leading" secondItem="G6g-bl-Elg" secondAttribute="leading" id="5Ma-eM-Dl8"/>
-                                                        <constraint firstItem="60X-p2-u3e" firstAttribute="top" secondItem="G6g-bl-Elg" secondAttribute="top" id="OjF-jl-a30"/>
-                                                        <constraint firstAttribute="height" constant="96" id="QrJ-2h-bAR"/>
-                                                        <constraint firstItem="tJv-J8-7Jv" firstAttribute="width" secondItem="G6g-bl-Elg" secondAttribute="width" id="SkN-GP-mkz"/>
-                                                        <constraint firstAttribute="trailing" secondItem="tJv-J8-7Jv" secondAttribute="trailing" id="ejN-Ed-Idz"/>
-                                                        <constraint firstAttribute="width" constant="76" id="euY-2D-0fw"/>
-                                                        <constraint firstAttribute="bottom" secondItem="tJv-J8-7Jv" secondAttribute="bottom" id="gGL-mi-hzg"/>
-                                                        <constraint firstItem="60X-p2-u3e" firstAttribute="leading" secondItem="G6g-bl-Elg" secondAttribute="leading" id="l6J-DV-IIu"/>
-                                                        <constraint firstItem="60X-p2-u3e" firstAttribute="width" secondItem="G6g-bl-Elg" secondAttribute="width" id="vRo-It-WCd"/>
-                                                    </constraints>
-                                                </view>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="G6g-bl-Elg" firstAttribute="top" secondItem="ZFA-R6-Rh6" secondAttribute="top" id="5rZ-kJ-6Zv"/>
-                                            <constraint firstItem="G6g-bl-Elg" firstAttribute="leading" secondItem="ZFA-R6-Rh6" secondAttribute="leading" id="RdY-vz-yax"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="imageView" destination="60X-p2-u3e" id="Y1L-39-KzF"/>
-                                            <outlet property="titleLabel" destination="tJv-J8-7Jv" id="hww-Or-K5N"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MVC-kz-bVx">
+                                <rect key="frame" x="164" y="583" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="BFZ-1b-3kt" kind="showDetail" identifier="shaderModifierTableSegue" id="WQc-v5-OCh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="0.28618706599999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1H6-Up-Faz" firstAttribute="width" secondItem="ErW-xc-BZm" secondAttribute="width" id="32J-im-PGx"/>
-                            <constraint firstItem="NzZ-YF-piW" firstAttribute="width" secondItem="ErW-xc-BZm" secondAttribute="width" id="Qad-4f-jmC"/>
                             <constraint firstAttribute="top" secondItem="1H6-Up-Faz" secondAttribute="top" id="Uqj-7W-UXL"/>
                             <constraint firstItem="1H6-Up-Faz" firstAttribute="leading" secondItem="ZY4-hq-Pb4" secondAttribute="leading" id="ZBM-Ye-TgO"/>
-                            <constraint firstItem="ZY4-hq-Pb4" firstAttribute="bottom" secondItem="NzZ-YF-piW" secondAttribute="bottom" id="dKc-yd-wjL"/>
-                            <constraint firstItem="NzZ-YF-piW" firstAttribute="leading" secondItem="ZY4-hq-Pb4" secondAttribute="leading" id="h4U-R7-vSD"/>
                             <constraint firstItem="1H6-Up-Faz" firstAttribute="height" secondItem="ErW-xc-BZm" secondAttribute="height" id="oiF-yy-bsZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZY4-hq-Pb4"/>
                     </view>
                     <connections>
                         <outlet property="sceneView" destination="1H6-Up-Faz" id="aW6-zE-VID"/>
-                        <outlet property="shaderCollectionView" destination="NzZ-YF-piW" id="6yi-Xm-4Sc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+        </scene>
+        <!--Shader Modifier Table View Controller-->
+        <scene sceneID="g73-sk-bw3">
+            <objects>
+                <tableViewController id="BFZ-1b-3kt" customClass="ShaderModifierTableViewController" customModule="ShaderModifierLibrary" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vHb-KW-OpW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="shaderModifierCell" id="k7V-B8-85e">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k7V-B8-85e" id="L1b-iI-BaT">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="BV1-FR-VrT" kind="show" identifier="gameViewControllerSegue" id="kyD-Tg-Y88"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="BFZ-1b-3kt" id="n2G-Qq-Hfl"/>
+                            <outlet property="delegate" destination="BFZ-1b-3kt" id="wmE-u7-RRI"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="muN-pE-DcM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="914" y="137"/>
         </scene>
     </scenes>
 </document>
