Added new shaders

--- a/ShaderModifierLibrary/Storyboard/Base.lproj/Main.storyboard
+++ b/ShaderModifierLibrary/Storyboard/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LvU-eh-xBq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LvU-eh-xBq">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -59,25 +59,35 @@
                                     </segue>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGB-A6-6P0">
+                                <rect key="frame" x="0.0" y="20" width="375" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="cGB-A6-6P0" firstAttribute="leading" secondItem="Qnl-hl-OkY" secondAttribute="leading" id="9J7-CO-wlX"/>
                             <constraint firstItem="Qnl-hl-OkY" firstAttribute="bottom" secondItem="1H6-Up-Faz" secondAttribute="bottom" id="FG8-dx-hOh"/>
                             <constraint firstItem="Qnl-hl-OkY" firstAttribute="bottom" secondItem="LGm-N1-ca1" secondAttribute="bottom" constant="20" id="Jmh-0s-ip7"/>
                             <constraint firstItem="LGm-N1-ca1" firstAttribute="centerX" secondItem="Qnl-hl-OkY" secondAttribute="centerX" id="R2R-GT-dg0"/>
                             <constraint firstItem="1H6-Up-Faz" firstAttribute="leading" secondItem="Qnl-hl-OkY" secondAttribute="leading" id="aiG-eC-h84"/>
                             <constraint firstItem="1H6-Up-Faz" firstAttribute="top" secondItem="Qnl-hl-OkY" secondAttribute="top" id="oQQ-Bt-QW7"/>
+                            <constraint firstItem="cGB-A6-6P0" firstAttribute="top" secondItem="Qnl-hl-OkY" secondAttribute="top" constant="20" id="qMs-Qy-ieb"/>
                             <constraint firstItem="Qnl-hl-OkY" firstAttribute="trailing" secondItem="1H6-Up-Faz" secondAttribute="trailing" id="qgL-tV-gB5"/>
+                            <constraint firstItem="Qnl-hl-OkY" firstAttribute="trailing" secondItem="cGB-A6-6P0" secondAttribute="trailing" id="szC-Cw-1D1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qnl-hl-OkY"/>
                     </view>
                     <connections>
                         <outlet property="sceneView" destination="1H6-Up-Faz" id="6R7-ct-FQj"/>
+                        <outlet property="titleLabel" destination="cGB-A6-6P0" id="Nnn-TR-Mvw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fcH-gf-nPD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1030" y="95"/>
+            <point key="canvasLocation" x="-1031.2" y="94.902548725637189"/>
         </scene>
     </scenes>
 </document>
